# poker-rs

./: .gitignore  AGENTS.md  CREATED_FILES.md  Cargo.toml
.github/workflows/: ci.yml
poker_client/: Cargo.toml  run.bat
poker_client/src/: game.rs  main.rs  network.rs  ui.rs
poker_protocol/: Cargo.toml
poker_protocol/src/: errors.rs  lib.rs  types.rs
poker_server/: Cargo.toml  README.md  run.bat
poker_server/src/: game.rs  main.rs  server.rs
