[package]
name = "poker_client"
version = "0.1.0"
edition = "2021"

[dependencies]
poker_protocol = { path = "../poker_protocol" }
bevy = "0.13"
bevy_egui = "0.27"
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.26"
futures = "0.3"
uuid = "1.11"
crossbeam = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures-channel = "0.3"

[dev-dependencies]
