[package]
name = "poker_server"
version = "0.1.0"
edition = "2021"

[dependencies]
poker_protocol = { path = "../poker_protocol" }
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
rand = "0.8"
chrono = "0.4"

[dev-dependencies]
tokio = { version = "1.36", features = ["test-util"] }
