[package]
name = "poker_server"
version = "0.1.0"
edition = "2021"

[features]
default = []
tls = ["native-tls", "tokio-native-tls"]

[dependencies]
poker_protocol = { path = "../poker_protocol" }
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
rand = "0.8"
chrono = { version = "0.4", features = ["std"] }
parking_lot = "0.12"
native-tls = { version = "0.2", optional = true }
tokio-native-tls = { version = "0.3", optional = true }
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1.40", features = ["test-util"] }
